--- a/CATeam3LAPS/src/main/resources/application.properties
+++ b/CATeam3LAPS/src/main/resources/application.properties
@@ -4,3 +4,14 @@ spring.datasource.username=root
 spring.datasource.password=Password
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+
+
+
+#email (please add email sender dependency >_<.)
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=sa53team3@gmail.com
+spring.mail.password=dehupvpjnfyaivtb
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
