--- a/CATeam3LAPS/src/main/resources/application.properties
+++ b/CATeam3LAPS/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port = 8080
 spring.datasource.url=jdbc:mysql://localhost:3306/leavedb?useSSL=false&serverTimezone=Asia/Singapore
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Password
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
