--- a/CATeam3LAPS/src/main/resources/application.properties
+++ b/CATeam3LAPS/src/main/resources/application.properties
@@ -1,6 +1,13 @@
-server.port = 8090
+server.port = 8080
 spring.datasource.url=jdbc:mysql://localhost:3306/leavedb?useSSL=false&serverTimezone=Asia/Singapore
 spring.datasource.username=root
-spring.datasource.password=Password
+spring.datasource.password=password
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=sa53team3@gmail.com
+spring.mail.password=dehupvpjnfyaivtb
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
